Update all files for finalizing version 0.3

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,19 @@
 # TYPE OF NODE ENVIRONMENT
-NODE_ENV=DEVELOPMENT
+NODE_ENV=
 
 # PORT OF SERVER
-PORT=4000
-NODE_VERSION=18.16.0
+PORT=
+
+# VERSION OF NODE
+NODE_VERSION=
 
 # REACT URL - FRONTEND
-REACT_URL=http://localhost:3000
+REACT_URL=
 
-# REDIS URL - CACHE DATABASE
-REDIS_URL=redis://localhost:6379
+# REDIS CREDENTIALS - CACHE DATABASE
+REDIS_PASSWORD=
+REDIS_SOCKET_HOST=
+REDIS_SOCKET_PORT=
 
 # MONGO DATABASE URI
 MONGO_DB_URI=
