--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,7 +19,8 @@ REDIS_SOCKET_PORT=
 MONGO_DB_URI=
 MONGO_DB_URI_LIMITER=
 
-# SECRETS
+# SECRETS 
+# (Create secret using this code "node require('crypto').randomBytes(64).toString('hex');")
 AUTHENTICATION_TOKEN_SECRET=
 ACCOUNT_ACTIVATION_TOKEN_SECRET=
 ACCOUNT_RECOVERY_RESET_PASSWORD_TOKEN_SECRET=
@@ -35,9 +36,11 @@ SMTP_PASSWORD=
 EMAIL_FROM=
 
 # GOOGLE AUTHENTICATOR SECRET
+# (Create secret using this code "node require('crypto').randomBytes(64).toString('hex');")
 GOOGLE_AUTHENTICATOR_NAME=
 
 # SSO GOOGLE IDENTITY SERVICES
+# (Follow this tutorial on how to create GIS Client ID - [https://youtu.be/HtJKUQXmtok?si=gwlFBdj-vIt-XoSR])
 GOOGLE_IDENITY_SERVICES_CLIENT_ID=
 
 # CLOUDINARY CREDENTIAL API
